# simple-mcp-server

./: Dockerfile  LICENSE  README.md  pyproject.toml  run_server.py  smithery.yaml
